<resources>
    <string name="app_name">TTH</string>

    <!-- LoginFragment -->
    <string name="app_login">登录</string>
    <string name="app_register">注册</string>
    <string name="app_mobile">手机号</string>
    <string name="app_email">邮箱</string>
    <string name="app_please_input_mobile">请输入手机号</string>
    <string name="app_please_input_pic_ver_code">请输入图片验证码</string>
    <string name="app_password">密码</string>
    <string name="app_please_input_password">请输入密码</string>
    <string name="app_please_input_email">请输入邮箱</string>
    <string name="app_forget_password">忘记密码？</string>
    <string name="app_picture_ver_code">图片验证码</string>
    <string name="app_change_one">换一张</string>
    <string name="app_net_work_error">您的网络异常，请稍后再试！</string>
    <string name="app_area_center">地区中心</string>

    <!-- RegisterFragment -->
    <string name="app_ver_code">验证码</string>
    <string name="app_please_input_ver_code">请输入验证码</string>
    <string name="app_next_step">下一步</string>
    <string name="app_input_again">再次输入</string>
    <string name="app_please_input_check_password">请输入确认密码</string>
    <string name="app_password_not_equal_check_password">密码与确认密码不一致</string>
    <string name="app_invite_code">邀请码</string>
    <string name="app_optional">选填</string>
    <string name="app_sure">确认</string>
    <string name="app_ok">确定</string>

    <!-- ForgetPasswordFragment -->
    <string name="app_get_ver_code">获取验证码</string>
    <string name="app_message_resend">重新获取</string>
    <string name="app_new_password">新密码</string>
    <string name="app_check_new_password">确认新密码</string>
    <string name="app_please_input_new_password">请输入新密码</string>
    <string name="app_please_input_check_new_password">请输入确认新密码</string>
    <string name="app_reset_password_success">设置新密码成功</string>

    <!-- MainActivity -->
    <string name="app_assets">资产</string>
    <string name="app_quotation">行情</string>
    <string name="app_trade">交易</string>
    <string name="app_data">资料</string>
    <string name="app_mine">我的</string>

    <string name="app_u">U</string>
    <string name="app_bit">Bit</string>
    <string name="app_wallet">钱包</string>
    <string name="app_total_assets">总资产</string>
    <string name="app_usd">USD</string>
    <string name="app_my_assets">我的资产</string>


    <string name="app_xxx_wallet">%1$s钱包</string>
    <string name="app_transfer">转账</string>
    <string name="app_collect">收款</string>
    <string name="app_assets_record">资产记录</string>
    <string name="app_all">全部</string>
    <string name="app_profit">收益</string>
    <string name="app_complete">完成</string>

    <string name="app_xxx_address">%1$s 收款地址</string>
    <string name="app_copy_address">复制地址</string>
    <string name="app_copy_succress">复制成功</string>
    <string name="app_xxx_transfer">%1$s转账</string>
    <string name="app_receive_address">接收地址</string>
    <string name="app_please_input_receive_address">请填写接收地址</string>
    <string name="app_transfer_tip">输入金额≥0.0002</string>
    <string name="app_transfer_value">转账金额</string>
    <string name="app_fee">矿工费</string>
    <string name="app_rest_value">%1$s余额：%2$s</string>
    <string name="app_to_account_value">到账金额</string>
    <string name="app_slow">慢</string>
    <string name="app_fast">快</string>
    <string name="app_suggest">建议：%1$s</string>

    <string name="app_record">记录</string>
    <string name="app_type">类型</string>
    <string name="app_charge_coin">充币</string>
    <string name="app_state">状态</string>
    <string name="app_charge_success">充币成功</string>
    <string name="app_time">时间</string>
    <string name="app_txld">Txld</string>

    <!--zxing-->
    <string name="zxing_create">生成</string>
    <string name="zxing_bottom_hint">建议与镜头保持10CM距离，尽量避免逆光和阴影</string>
    <string name="zxing_top_hint">将条形码或二维码置于取景框内系统会自动扫描</string>
    <string name="zxing_msg_camera_framework_bug">抱歉，Android相机出现问题。你可能需要重启设备。</string>
    <string name="zxing_button_ok">确定</string>
    <string name="property_drawer_qrcode_scanner">扫一扫</string>
    <string name="capture_success_result">解析成功，结果为：</string>
    <string name="capture_error_result">解析图片失败</string>
    <string name="capture_scan_doing">正在扫描...</string>
    <string name="capture_scan_error">无法识别</string>
    <string name="capture_choose_qcode_photo">选择二维码图片</string>
    <string name="choose_from_photo">从相册选取</string>
    <string name="cancel">取消</string>
    <string name="network_excption">网络异常，请稍后重试！</string>
    <string name="unknown_excption">未知异常，请稍后重试！</string>
    <string name="permission_denied_forever_message">We need some of the permissions you rejected or the system failed to apply failed, please manually set to the page authorize, otherwise the function can\'t be used normally!</string>
    <string name="app_transfering">正在转账中</string>
    <string name="app_input_error">输入错误</string>
    <string name="app_input_transfer_number">请输入转账数量</string>
    <string name="app_input_receive_url">请输入接收地址</string>
    <string name="app_min_transfer_money">TTH转账金额不能少于110</string>
    <string name="app_money_number">请输入正确的金额</string>

    <!--MyFragment-->
    <string name="app_not_activity">未激活</string>
    <string name="app_activitied">已激活</string>
    <string name="app_msg_center">消息中心</string>
    <string name="app_recruit_friend">招募好友</string>
    <string name="app_service_center">客服中心</string>
    <string name="app_language_setting">语言设置</string>
    <string name="app_language_type_0">简体中文</string>
    <string name="app_language_type_1">English</string>
    <string name="app_safe_center">安全中心</string>
    <string name="app_logout">退出登录</string>
    <string name="app_user_info">个人信息</string>
    <string name="app_avatar">头像</string>
    <string name="app_nick">昵称</string>
    <string name="app_are_you_sure_logout">是否确定退出登录</string>
    <string name="app_service_online">在线客服</string>
    <string name="app_send">发送</string>
    <string name="app_invite_code_xxx">邀请码：%1$s</string>
    <string name="app_account">账号</string>
    <string name="app_activity_state">激活状态</string>
    <string name="app_rest_balance">余额</string>
    <string name="app_yes">是</string>
    <string name="app_no">否</string>
    <string name="app_save_poster">保存海报 邀请好友</string>
    <string name="app_register_link_xxx">注册链接：%1$s</string>

    <!--SafeCenterFragment-->
    <string name="app_mobile_number">手机号码</string>
    <string name="app_email_address">邮箱地址</string>
    <string name="app_login_password">登录密码</string>
    <string name="app_pay_password">支付密码</string>
    <string name="app_not_setting">未设置</string>
    <string name="app_modify">修改</string>
    <string name="app_modify_nick">修改昵称</string>
    <string name="app_please_input_nick">请输入昵称</string>
    <string name="app_update_nick_success">修改昵称成功</string>
    <string name="app_upload_avatar_success">修改头像成功</string>
    <string name="app_upload_avatar_failed">修改头像失败</string>
    <string name="app_take_photo">拍照</string>
    <string name="app_change">更换</string>
    <string name="app_select_from_album">从手机相册选择</string>
    <string name="app_cancel">取消</string>
    <string name="app_bind_email_success">绑定邮箱成功</string>
    <string name="app_bind_phone_success">绑定手机号成功</string>
    <string name="app_modify_password_success">修改密码成功</string>
    <string name="app_set_password_success">设置密码成功</string>

    <!--BindEmailFragment-->
    <string name="app_bind_email">绑定邮箱</string>
    <string name="app_bind_phone">绑定手机号</string>
    <string name="app_change_phone">更换手机号</string>
    <string name="app_please_input_bind_email">请输入要绑定的邮箱地址</string>
    <string name="app_modify_login_password">修改登录密码</string>
    <string name="app_old_password">原密码</string>
    <string name="app_please_input_old_password">请输入原登录密码</string>
    <string name="app_please_input_new_login_password">请输入新登录密码</string>
    <string name="app_please_input_new_login_password_again">再次输入新登录密码</string>
    <string name="app_new_password_not_equal_check_password">新密码与确认密码不一致</string>
    <string name="app_set_new_password">设置新密码</string>
    <string name="app_set_pay_password">设置交易密码</string>
    <string name="app_trade_password">交易密码</string>
    <string name="app_sure_trade_password">确认交易密码</string>
    <string name="app_please_input_trade_password">请输入交易密码</string>
    <string name="app_please_input_sure_trade_password">请输入确认交易密码</string>
    <string name="app_pay_password_not_equal_check_password">交易密码与确认密码不一致</string>
    <string name="app_pay_psw_tip">密码用于交易操作时，验证您的身份！</string>
    <string name="app_psw_tip">密码至少8个字符，而且同时包含字母和数字</string>

    <!--QuotatationFragment-->
    <string name="app_trade_record">成交记录</string>
    <string name="app_simple_intro">简介</string>
    <string name="app_history_data">历史数据</string>
    <string name="app_direction">方向</string>
    <string name="app_price_usdt">价格(USDT)</string>
    <string name="app_num_usdt">数量(USDT)</string>

    <!--DataFragment-->
    <string name="app_data_center">资料中心</string>
    <string name="app_apply_service_anytime">随时随地为您提供服务</string>
    <string name="app_hot_question">热门问题</string>
    <string name="app_safe_relative">安全相关</string>
    <string name="app_contact_service">联系客服</string>
</resources>