<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ff_ff_ff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onBackClick"
            android:paddingLeft="16dp"
            android:scaleType="centerInside"
            android:src="@drawable/app_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_register"
            android:textColor="@color/color_00_00_00"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingLeft="19dp"
            android:paddingRight="19dp"
            android:text="@string/app_login"
            android:textColor="@color/color_27_77_ff"
            android:textSize="15dp"
            android:textStyle="bold" />

    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="36dp"
        android:layout_marginRight="30dp"
        android:text="@string/app_password"
        android:textColor="@color/color_00_00_00"
        android:textSize="14dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="30dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/app_please_input_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@color/color_00_00_00"
        android:textColorHint="@color/color_b2_b2_b2"
        android:textSize="16dp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="30dp"
        android:background="@color/color_b2_b2_b2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="36dp"
        android:layout_marginRight="30dp"
        android:text="@string/app_input_again"
        android:textColor="@color/color_00_00_00"
        android:textSize="14dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etCheckPassword"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="30dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/app_please_check_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@color/color_00_00_00"
        android:textColorHint="@color/color_b2_b2_b2"
        android:textSize="16dp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="30dp"
        android:background="@color/color_b2_b2_b2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="36dp"
        android:layout_marginRight="30dp"
        android:text="@string/app_invite_code"
        android:textColor="@color/color_00_00_00"
        android:textSize="14dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etInviteCode"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="30dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/app_optional"
        android:singleLine="true"
        android:textColor="@color/color_00_00_00"
        android:textColorHint="@color/color_b2_b2_b2"
        android:textSize="16dp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="30dp"
        android:background="@color/color_b2_b2_b2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="36dp"
        android:layout_marginRight="30dp"
        android:text="@string/app_picture_ver_code"
        android:textColor="@color/color_00_00_00"
        android:textSize="14dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="6dp"
        android:orientation="horizontal"
        android:paddingLeft="31dp"
        android:paddingRight="30dp">

        <EditText
            android:id="@+id/etPicVerCode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/app_please_input_pic_ver_code"
            android:inputType="phone"
            android:singleLine="true"
            android:textColor="@color/color_00_00_00"
            android:textColorHint="@color/color_b2_b2_b2"
            android:textSize="16dp"
            android:textStyle="bold" />


        <ImageView
            android:layout_width="81dp"
            android:layout_height="31dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="9dp"
            android:background="@drawable/shape_stroke_b2b2b2_2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <TextView
            android:id="@+id/tvChange"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:paddingLeft="13dp"
            android:text="@string/app_change_one"
            android:textColor="@color/color_b2_b2_b2"
            android:textSize="12dp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="30dp"
        android:background="@color/color_b2_b2_b2" />


    <TextView
        android:id="@+id/tvOk"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="87dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/shape_00cf7c_4"
        android:gravity="center"
        android:text="@string/app_sure"
        android:textColor="@color/color_ff_ff_ff"
        android:textSize="16dp"
        android:textStyle="bold" />

</LinearLayout>