<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ff_ff_ff"
    android:orientation="vertical"
    android:paddingBottom="84dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onBackClick"
            android:paddingLeft="26dp"
            android:scaleType="centerInside"
            android:src="@drawable/app_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_set_pay_password"
            android:textColor="@color/color_00_00_00"
            android:textSize="16dp"
            android:textStyle="bold" />


    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="30dp"
        android:text="@string/app_trade_password"
        android:textColor="@color/color_00_00_00"
        android:textSize="14dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPayPassword"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="30dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/app_please_input_trade_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@color/color_00_00_00"
        android:textColorHint="@color/color_b2_b2_b2"
        android:textSize="16dp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="30dp"
        android:background="@color/color_b2_b2_b2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="30dp"
        android:text="@string/app_sure_trade_password"
        android:textColor="@color/color_00_00_00"
        android:textSize="14dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNewCheckPassword"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="30dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/app_please_input_sure_trade_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@color/color_00_00_00"
        android:textColorHint="@color/color_b2_b2_b2"
        android:textSize="16dp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="30dp"
        android:background="@color/color_b2_b2_b2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <TextView
        android:id="@+id/tvOk"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="82dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/shape_00cf7c_4"
        android:gravity="center"
        android:text="@string/app_sure"
        android:textColor="@color/color_ff_ff_ff"
        android:textSize="16dp"
        android:textStyle="bold" />

</LinearLayout>