<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ff_ff_ff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onBackClick"
            android:paddingLeft="16dp"
            android:scaleType="centerInside"
            android:src="@drawable/app_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_register"
            android:textColor="@color/color_00_00_00"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingLeft="19dp"
            android:paddingRight="19dp"
            android:text="@string/app_login"
            android:textColor="@color/color_27_77_ff"
            android:textSize="15dp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RadioGroup
        android:id="@+id/rGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:button="@android:color/transparent"
            android:checked="true"
            android:text="@string/app_mobile"
            android:textColor="@color/color_00_00_00"
            android:textSize="29dp"
            android:textStyle="bold" />


        <RadioButton
            android:id="@+id/rbEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="31dp"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/app_email"
            android:textColor="@color/color_00_00_00"
            android:textSize="16dp"
            android:textStyle="bold" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/llPhone"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:paddingLeft="31dp"
        android:paddingRight="30dp">

        <TextView
            android:id="@+id/tvPhoneCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="+86"
            android:textColor="@color/color_00_00_00"
            android:drawablePadding="9dp"
            android:drawableRight="@drawable/app_show_more"
            android:gravity="center_vertical"
            android:textSize="18dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="9dp"
            android:src="@drawable/app_show_more" />

        <EditText
            android:id="@+id/etMobile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="14dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/app_please_input_mobile"
            android:inputType="phone"
            android:singleLine="true"
            android:textColor="@color/color_00_00_00"
            android:textColorHint="@color/color_b2_b2_b2"
            android:textSize="16dp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="30dp"
        android:text="@string/app_email"
        android:textColor="@color/color_00_00_00"
        android:textSize="14dp"
        android:textStyle="bold"
        android:visibility="gone" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="30dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/app_please_input_email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textColor="@color/color_00_00_00"
        android:textColorHint="@color/color_b2_b2_b2"
        android:textSize="16dp"
        android:textStyle="bold"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="30dp"
        android:background="@color/color_b2_b2_b2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="36dp"
        android:layout_marginRight="30dp"
        android:text="@string/app_ver_code"
        android:textColor="@color/color_00_00_00"
        android:textSize="14dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="3dp"
        android:orientation="horizontal"
        android:paddingLeft="31dp"
        android:paddingRight="30dp">

        <EditText
            android:id="@+id/etVerCode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/app_please_input_ver_code"
            android:inputType="phone"
            android:singleLine="true"
            android:textColor="@color/color_00_00_00"
            android:textColorHint="@color/color_b2_b2_b2"
            android:textSize="16dp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvGetCode"
            android:layout_width="94dp"
            android:layout_height="26dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp"
            android:background="@drawable/shape_stroke_00cf7c_12"
            android:gravity="center"
            android:text="@string/app_get_ver_code"
            android:textColor="@color/color_00_cf_7c"
            android:textSize="12dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="30dp"
        android:background="@color/color_b2_b2_b2" />


    <TextView
        android:id="@+id/tvNext"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="156dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/shape_00cf7c_4"
        android:gravity="center"
        android:text="@string/app_next_step"
        android:textColor="@color/color_ff_ff_ff"
        android:textSize="16dp"
        android:textStyle="bold" />

</LinearLayout>