<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ff_ff_ff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onBackClick"
            android:paddingLeft="26dp"
            android:scaleType="centerInside"
            android:src="@drawable/app_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_login"
            android:textColor="@color/color_00_00_00"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingLeft="19dp"
            android:paddingRight="19dp"
            android:text="@string/app_sure"
            android:textColor="@color/color_27_77_ff"
            android:textSize="15dp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="36dp"
        android:layout_marginRight="30dp"
        android:text="@string/app_nick"
        android:textColor="@color/color_00_00_00"
        android:textSize="14dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNick"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="30dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/app_please_input_nick"
        android:inputType="textPassword"
        android:maxLength="20"
        android:singleLine="true"
        android:textColor="@color/color_00_00_00"
        android:textColorHint="@color/color_b2_b2_b2"
        android:textSize="16dp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="30dp"
        android:background="@color/color_b2_b2_b2" />


</LinearLayout>